--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Mario Castro <mariocastro.pva@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "socket.io": "^4.6.1"
